--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -33,7 +33,7 @@ cache: &global_cache
 #        - sausage-store-${VERSION}/sausage-store-${VERSION}.jar # сохранение собранного бэкенда как артефакт
 #        - ${CI_PROJECT_DIR}/.m2/ # сохранение зависимостей для SAST
 
-.build-docker-kaniko:
+build-docker-kaniko:
   stage: build
   cache: []
   image:
@@ -50,7 +50,7 @@ cache: &global_cache
         --cache=true
         --build-arg "VERSION=$VERSION"
 
-docker-image-test:
+.docker-image-test:
   image:
     name: curlimages/curl
     #postman/newman:alpine
@@ -145,7 +145,7 @@ docker-image-test:
       )
       curl -X POST -H "Content-type: application/json" --data "$DATA" ${NOTIFY_SLACK_URL}
 
-.upload-docker-latest:
+upload-docker-latest:
   variables:
     GIT_STRATEGY: none
   #image: docker:20.10.12-dind-rootless
@@ -155,8 +155,6 @@ docker-image-test:
   cache: []
   stage: release
   before_script:
-#    - until docker info; do sleep 1; done
-#    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 #  extends: .docker-registry-auth
   script:
@@ -181,7 +179,7 @@ docker-image-test:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
     - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_BACKEND_URL=${NEXUS_REPO_BACKEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS"; export "PSQL_USER=$PSQL_USER"; export "PSQL_PASSWORD=$PSQL_PASSWORD"; export "PSQL_HOST=$PSQL_HOST"; export "PSQL_PORT=$PSQL_PORT"; export "PSQL_DBNAME=$PSQL_DBNAME"; export "MONGO_USER=$MONGO_USER"; export "MONGO_PASSWORD=$MONGO_PASSWORD"; export "MONGO_HOST=$MONGO_HOST"; export "MONGO_DATABASE=$MONGO_DATABASE"; setsid /bin/bash -s " < ./backend/deploy.sh
 
-.deploy-docker:
+deploy-docker:
   stage: deploy
   cache: []
   image: alpine:3.15.0
