--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - deploy
 
 include:
-#  - template: Security/SAST.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
   - local: /template.gitlab-ci.yml
   - project: 'templates/ci'
     file: 'DockerInDockerTemplate.yml'
@@ -21,7 +21,7 @@ cache: &global_cache
     - .m2/repository
 
 
-.build-code-job: # задача с именем build-code-job
+build-code-job: # задача с именем build-code-job
   stage: build   # этап build
   cache:
     <<: *global_cache
@@ -33,7 +33,7 @@ cache: &global_cache
 #        - sausage-store-${VERSION}/sausage-store-${VERSION}.jar # сохранение собранного бэкенда как артефакт
 #        - ${CI_PROJECT_DIR}/.m2/ # сохранение зависимостей для SAST
 
-.build-docker-kaniko:
+build-docker-kaniko:
   stage: build
   cache: []
   image:
@@ -55,8 +55,7 @@ docker-image-test:
     name: postman/newman:alpine
     entrypoint: [ "" ]
   services:
-    - name: $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
-      #${CI_COMMIT_SHA}-kaniko
+    - name: $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:${CI_COMMIT_SHA}-kaniko
       alias: backend
   cache: []
   stage: test
@@ -84,7 +83,7 @@ docker-image-test:
     paths:
       - report.html
 
-.spotbugs-sast:
+spotbugs-sast:
   stage: test
   cache:
     <<: *global_cache
@@ -93,7 +92,7 @@ docker-image-test:
     COMPILE: "false"
     MAVEN_REPO_PATH: ${CI_PROJECT_DIR}/.m2/repository
 
-.sonarqube-backend-sast:
+sonarqube-backend-sast:
   stage: test
   image: maven:3.8-openjdk-16
   cache: []
@@ -106,7 +105,7 @@ docker-image-test:
       -Dsonar.login=${SONAR_LOGIN}
       -Dsonar.projectName=${SONAR_PROJECT_NAME_BACK}
 
-.upload-release: # задача с именем upload-release
+upload-release: # задача с именем upload-release
   stage: release # этап release
   cache:
     <<: *global_cache
@@ -142,7 +141,7 @@ docker-image-test:
       )
       curl -X POST -H "Content-type: application/json" --data "$DATA" ${NOTIFY_SLACK_URL}
 
-.upload-docker-latest:
+upload-docker-latest:
   variables:
     GIT_STRATEGY: none
   #image: docker:20.10.12-dind-rootless
@@ -153,15 +152,10 @@ docker-image-test:
   stage: release
   before_script:
     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-#  extends: .docker-registry-auth
   script:
-#    - docker pull $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA
-#    # если образ прошел проверки в CI (сканирование, тесты и т.д), то тегаем latest
-#    - docker tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
-#    - docker push $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
      - crane tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA-kaniko latest
 
-.deploy:
+deploy:
   stage: deploy
   cache: []
   rules:
@@ -176,11 +170,10 @@ docker-image-test:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
     - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_BACKEND_URL=${NEXUS_REPO_BACKEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS"; export "PSQL_USER=$PSQL_USER"; export "PSQL_PASSWORD=$PSQL_PASSWORD"; export "PSQL_HOST=$PSQL_HOST"; export "PSQL_PORT=$PSQL_PORT"; export "PSQL_DBNAME=$PSQL_DBNAME"; export "MONGO_USER=$MONGO_USER"; export "MONGO_PASSWORD=$MONGO_PASSWORD"; export "MONGO_HOST=$MONGO_HOST"; export "MONGO_DATABASE=$MONGO_DATABASE"; setsid /bin/bash -s " < ./backend/deploy.sh
 
-.deploy-docker:
+deploy-docker:
   stage: deploy
   cache: []
   image: alpine:3.15.0
-  # если хотим сделать деплой по кнопке
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
