--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -32,21 +32,6 @@ build-code-job: # задача с именем build-code-job
     paths:
       - sausage-store-${VERSION}/public_html  # сохранение собранного фронтэнда как артефакт
 
-.build-docker:
-  stage: build
-  image: docker:20.10.12-dind-rootless
-  before_script:
-    - until docker info; do sleep 1; done
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-  script:
-    - cd frontend
-    - >
-      docker build
-      --build-arg VERSION=$VERSION
-      --tag $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:$CI_COMMIT_SHA
-      .
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:$CI_COMMIT_SHA
-
 build-docker-kaniko:
   stage: build
   cache: []
@@ -119,8 +104,7 @@ upload-release: # задача с именем upload-release
 
 upload-docker-latest:
   variables:
-    GIT_STRATEGY: none
-#  image: docker:20.10.12-dind-rootless
+    GIT_STRATEGY: non
   image:
     name: gcr.io/go-containerregistry/crane:debug
     entrypoint: [ "" ]
@@ -128,10 +112,6 @@ upload-docker-latest:
   before_script:
     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-#    - docker pull $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:$CI_COMMIT_SHA
-#    # если образ прошел проверки в CI (сканирование, тесты и т.д), то тегаем latest
-#    - docker tag $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:latest
-#    - docker push $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:latest
      - crane tag $CI_REGISTRY_IMAGE/$DOCKER_FRONTEND_NAME:$CI_COMMIT_SHA-kaniko latest
 
 
@@ -160,7 +140,6 @@ deploy:
 deploy-docker:
   stage: deploy
   image: alpine:3.15.0
-  # если хотим сделать деплой по кнопке
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
