--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -149,7 +149,7 @@ upload-docker-latest:
   before_script:
     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-     - crane tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA-kaniko latest
+     - crane tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$VERSION latest
 
 deploy:
   stage: deploy
