--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,19 @@
+spring.data.mongodb.uri=mongodb://${env:MONGO_USER}:${env:MONGO_PASSWORD}@${env:MONGO_HOST}:27018/${env:MONGO_DATABASE}?tls=true
+spring.flyway.enabled=false
+
+spring.application.name=sausage-store
 management.security.enabled=false
 
-spring.datasource.url=jdbc:postgresql://hostname:6432/sausagestore
+spring.datasource.url=jdbc:postgresql://${env:PSQL_HOST}:${env:PSQL_PORT}/${env:PSQL_DBNAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=${env:PSQL_USER}
 
-#spring.datasource.name=ecommercedb
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
-spring.data.mongodb.uri=mongodb://user:pass@host:port/db?tls=true
-spring.flyway.enabled=false
+
+spring.cloud.vault.token=${env:VAULT_TOKEN}
+spring.cloud.vault.scheme=http
+spring.cloud.vault.host=${env:VAULT_HOST}
+spring.cloud.vault.kv.enabled=true
+spring.config.import=vault://secret/${spring.application.name}
