--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -49,7 +49,7 @@ build-docker-kaniko:
         --destination "${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_NAME}:${VERSION}"
         --cache=true
 
-docker-image-test:
+.docker-image-test:
   image:
     name: postman/newman:alpine
     entrypoint: [ "" ]
@@ -136,7 +136,7 @@ docker-image-test:
       )
       curl -X POST -H "Content-type: application/json" --data "$DATA" ${NOTIFY_SLACK_URL}
 
-.upload-docker-latest:
+upload-docker-latest:
   variables:
     GIT_STRATEGY: none
   #image: docker:20.10.12-dind-rootless
@@ -165,7 +165,7 @@ docker-image-test:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
     - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_BACKEND_URL=${NEXUS_REPO_BACKEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS"; export "PSQL_USER=$PSQL_USER"; export "PSQL_PASSWORD=$PSQL_PASSWORD"; export "PSQL_HOST=$PSQL_HOST"; export "PSQL_PORT=$PSQL_PORT"; export "PSQL_DBNAME=$PSQL_DBNAME"; export "MONGO_USER=$MONGO_USER"; export "MONGO_PASSWORD=$MONGO_PASSWORD"; export "MONGO_HOST=$MONGO_HOST"; export "MONGO_DATABASE=$MONGO_DATABASE"; setsid /bin/bash -s " < ./backend/deploy.sh
 
-.deploy-docker:
+deploy-docker:
   stage: deploy
   cache: []
   image: alpine:3.15.0
