--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,15 +3,15 @@ spring.flyway.enabled=false
 spring.application.name=sausage-store
 management.security.enabled=false
 
-spring.datasource.url=jdbc:postgresql://${env:PSQL_HOST}:${env:PSQL_PORT}/${env:PSQL_DBNAME}
+spring.datasource.url=jdbc:postgresql://${PSQL_HOST}:${PSQL_PORT}/${PSQL_DBNAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
 
-spring.cloud.vault.token=${env:VAULT_TOKEN}
+spring.cloud.vault.token=${VAULT_TOKEN}
 spring.cloud.vault.scheme=http
-spring.cloud.vault.host=${env:VAULT_HOST}
+spring.cloud.vault.host=${VAULT_HOST}
 spring.cloud.vault.kv.enabled=true
 spring.config.import=vault://secret/${spring.application.name}
