--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,14 @@ backend:
   only:
     changes: #как только происходит изменение в папке backend, запускается дочерний пайплайн, который лежит в этой папке
       - backend/**/*
+      - docker-compose.yml
+
+backend-report:
+  stage: module-pipelines
+  trigger:
+    include:
+      - "/backend-report/.gitlab-ci.yml"
+    strategy: depend
+  only:
+    changes:
+      - backend-report/**/*
