--- a/backend-report/Dockerfile
+++ b/backend-report/Dockerfile
@@ -1,13 +1,13 @@
 FROM maven:3.8-openjdk-16 as builder
 #Create build directory
-ARG VERSION
 WORKDIR /usr/src/app
-COPY . .
-RUN mvn package -DskipTests -Dversion.application=${VERSION}
+COPY *.xml ./
+RUN mvn dependency:go-offline -Dmaven.test.skip -Dmaven.repo.local=.m2/repository
+COPY ./src ./src
+RUN mvn package -Dmaven.test.skip -Dmaven.repo.local=.m2/repository -Dversion.application=latest
 
 FROM openjdk:16
 
-ARG VERSION
 #Create app directory
 WORKDIR /usr/src/app
 
@@ -15,7 +15,7 @@ RUN curl https://storage.yandexcloud.net/cloud-certs/CA.pem -o YandexInternalRoo
     keytool -importcert -file YandexInternalRootCA.crt -alias yandex -cacerts -storepass changeit -noprompt && \
     rm -f YandexInternalRootCA.crt
 
-COPY --from=builder /usr/src/app/target/sausage-store-report-${VERSION}.jar sausage-store-report.jar
+COPY --from=builder /usr/src/app/target/sausage-store-report-latest.jar sausage-store-report.jar
 
 ENTRYPOINT ["java", "-jar", "./sausage-store-report.jar", "--service.port=8081"]
 EXPOSE 8081
