--- a/backend-report/src/main/resources/application.properties
+++ b/backend-report/src/main/resources/application.properties
@@ -2,4 +2,15 @@
 #management.security.enabled=false
 #spring.jpa.show-sql=false
 #spring.data.mongodb.uri=mongodb://sausage_user:some_pass@rc1b-8c1wqecig1kl0mi4.mdb.yandexcloud.net:27018/sausagedb?tls=true
-spring.data.mongodb.password
+#spring.data.mongodb.password
+spring.flyway.enabled=false
+
+spring.application.name=sausage-store-reports
+management.security.enabled=false
+spring.jpa.show-sql=false
+
+spring.cloud.vault.token=${VAULT_TOKEN}
+spring.cloud.vault.scheme=http
+spring.cloud.vault.host=${VAULT_HOST}
+spring.cloud.vault.kv.enabled=true
+spring.config.import=vault://secret/sausage-store
