--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -28,10 +28,6 @@ build-code-job: # задача с именем build-code-job
   script: # объявление скрипта
     - cd backend
     - mvn package -Dversion.application=${VERSION} -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository
-#  artifacts:
-#      paths:
-#        - sausage-store-${VERSION}/sausage-store-${VERSION}.jar # сохранение собранного бэкенда как артефакт
-#        - ${CI_PROJECT_DIR}/.m2/ # сохранение зависимостей для SAST
 
 build-docker-kaniko:
   stage: build
@@ -138,7 +134,6 @@ upload-release: # задача с именем upload-release
 upload-docker-latest:
   variables:
     GIT_STRATEGY: none
-  #image: docker:20.10.12-dind-rootless
   image:
     name: gcr.io/go-containerregistry/crane:debug
     entrypoint: [ "" ]
@@ -197,3 +192,16 @@ deploy-docker:
       export "VAULT_HOST=${VAULT_HOST}";
       export "VAULT_TOKEN=${VAULT_TOKEN}";
       setsid /bin/bash -s " < ./backend/backend_docker_deploy.sh
+
+deploy-docker-compose:
+  stage: deploy
+  cache: []
+  image: docker:20.10.12-dind
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: manual
+    - when: on_success
+  extends: .docker-compose-init
+  script:
+    - docker-compose --context sausage-store up -d backend
+    - docker --context sausage-store ps
