--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ frontend:
   only:
     changes: #как только происходит изменение в папке frontend, запускается дочерний пайплайн, который лежит в этой папке
       - frontend/**/*
+      - docker-compose.yml
 
 backend:
   stage: module-pipelines
@@ -31,3 +32,4 @@ backend-report:
   only:
     changes:
       - backend-report/**/*
+      - docker-compose.yml
