--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,6 @@ services:
     restart: on-failure
     depends_on:
       - vault-setup
-    build:
-      context: backend-report
-      dockerfile: Dockerfile
     environment:
       VAULT_TOKEN: ${VAULT_TOKEN}
       VAULT_HOST: ${VAULT_HOST}
@@ -54,7 +51,7 @@ services:
     volumes:
       - nginx-conf-compose:/etc/nginx/conf.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./app/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+      - app/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
     networks:
       - sausage-store-compose
 
