--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     volumes:
       - nginx-conf-compose:/etc/nginx/conf.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./app/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+      - /home/front-user/nginx-template/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
     networks:
       - sausage-store-compose
 
