--- a/template.gitlab-ci.yml
+++ b/template.gitlab-ci.yml
@@ -55,6 +55,7 @@
           SPRING_DATA_MONGODB_URL=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST}:27018/${MONGO_DATABASE}?tls=true
           PSQL_PASSWORD=${PSQL_PASSWORD}
           PSQL_USER=${PSQL_USER}
+          DEV_USER=${DEV_USER}
           EOF
     after_script:
         - rm .env
