debploy blue green

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: "3.3"
+version: "3.4"
 services:
 
-  backend:
+  blue:
     image: ${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_NAME}:${BACKEND_VERSION}
     depends_on:
       - vault-setup
     restart: on-failure
+    expose:
+      - ${BACKEND_PORT}
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://${PSQL_HOST}:${PSQL_PORT}/${PSQL_DBNAME}
       SPRING_FLYWAY_BASELINE-ON-MIGRATE: "true"
@@ -13,13 +15,21 @@ services:
       BACKEND_PORT: ${BACKEND_PORT}
       VAULT_HOST: ${VAULT_HOST}
       VIRTUAL_HOST: backend.sausage-store-alekseev.ml
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:${BACKEND_PORT}/actuator/health
+      interval: 5s
+      timeout: 5s
+      retries: 6
+      start_period: 25s
     networks:
       - sausage-store-compose
 
-  backend-report:
+  green:
     image: ${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_REPORT_NAME}:${BACKEND_REPORT_VERSION}
     container_name: ${DOCKER_BACKEND_REPORT_NAME}-compose
     restart: on-failure
+    expose:
+      - ${BACKEND_PORT}
     depends_on:
       - vault-setup
     environment:
