--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -203,6 +203,5 @@ deploy-docker-compose:
     - when: on_success
   extends: .docker-compose-init
   script:
-    - docker-compose --context sausage-store pull backend
-    - docker-compose --context sausage-store up -d --force-recreate --scale backend=${BACKEND_SCALE_COUNT}
+    - bash backend/deploy_blue_green.sh
     - docker --context sausage-store ps
