--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -45,7 +45,7 @@ build-docker-kaniko:
         --destination "${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_NAME}:${VERSION}"
         --cache=true
 
-docker-image-test:
+.docker-image-test:
   image:
     name: postman/newman:alpine
     entrypoint: [ "" ]
@@ -203,5 +203,6 @@ deploy-docker-compose:
     - when: on_success
   extends: .docker-compose-init
   script:
-    - docker-compose --context sausage-store up -d backend
+    - docker-compose --context sausage-store pull backend
+    - docker-compose --context sausage-store up -d --force-recreate --scale backend=${BACKEND_SCALE_COUNT}
     - docker --context sausage-store ps
