--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -116,10 +116,7 @@ upload-docker-latest:
 
 deploy:
   stage: deploy
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      when: manual
-    - when: on_success
+  when: manual
   extends: .ssh-connection
   environment:
     name: staging-front
@@ -139,10 +136,7 @@ deploy:
 deploy-docker:
   stage: deploy
   image: alpine:3.15.0
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      when: manual
-    - when: on_success
+  when: manual
   extends: .ssh-connection-from-docker
   script:
     - ssh ${DEV_USER}@${DEV_HOST}
@@ -160,13 +154,22 @@ deploy-docker-compose:
   stage: deploy
   cache: []
   image: docker:20.10.12-dind
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      when: manual
-    - when: on_success
+  when: manual
   extends: .docker-compose-init
   script:
     - scp ./app/nginx.tmpl ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/nginx.tmpl
     - docker-compose --context sausage-store pull nginx dockergen
     - docker-compose --context sausage-store up -d --force-recreate nginx dockergen
     - docker --context sausage-store ps
+
+deploy-argocd:
+  stage: deploy
+  cache: []
+  image: argoproj/argocd:v2.3.3
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: manual
+    - when: on_success
+  script:
+    argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app set $ARGO_APP -p frontend.image.tag=$VERSION
+    argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
