--- a/backend-report/.gitlab-ci.yml
+++ b/backend-report/.gitlab-ci.yml
@@ -101,5 +101,5 @@ deploy-argocd:
       when: manual
     - when: on_success
   script:
-    argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app set $ARGO_APP -p backend-report.image.tag=$VERSION
-    argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
+    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app set $ARGO_APP -p backend-report.image.tag=$VERSION
+    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
