fix argo command

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -207,4 +207,4 @@ deploy-argocd:
     - when: on_success
   script:
     - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app set $ARGO_APP -p backend.image.tag=$VERSION
-    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
+#    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
