--- a/backend-report/.gitlab-ci.yml
+++ b/backend-report/.gitlab-ci.yml
@@ -102,4 +102,4 @@ deploy-argocd:
     - when: on_success
   script:
     - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app set $ARGO_APP -p backend-report.image.tag=$VERSION
-    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
+#    - argocd --grpc-web --auth-token $ARGO_TOKEN --server $ARGO_SERVER app sync $ARGO_APP
